Only order form left

--- a/comp1004-assignment04/comp1004-assignment04.csproj
+++ b/comp1004-assignment04/comp1004-assignment04.csproj
@@ -119,6 +119,7 @@
     <EmbeddedResource Include="StartForm.resx">
       <DependentUpon>StartForm.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="DollarComputerClassDiagram.cd" />
     <None Include="dollarsignicon" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
